# SendAnything

./: README.md  SendAnything-server.py
app/: build.gradle
app/src/androidTest/java/com/hamza/sendanything/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hamza/sendanything/activities/: MainActivity.kt  ReceiveFileActivity.kt  SendFileActivity.kt
app/src/main/res/drawable/: round_bg_btn.xml
app/src/main/res/layout/: activity_main.xml  activity_recieve_file.xml  activity_send_file.xml  dialog_ongoing_operation.xml  dialog_send_server_login.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/hamza/sendanything/: ExampleUnitTest.kt
client/: settings.gradle
client/app/: build.gradle
client/app/src/androidTest/java/com/example/sendanything/: ExampleInstrumentedTest.kt
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/com/example/sendanything/: MainActivity.kt
client/app/src/main/res/layout/: activity_main.xml
client/app/src/main/res/values/: strings.xml
client/app/src/test/java/com/example/sendanything/: ExampleUnitTest.kt
client/gradle/wrapper/: gradle-wrapper.properties
gradle/wrapper/: gradle-wrapper.properties
server/: CMakeLists.txt  README.md  main.cpp  send-anything-server
server/impl/: receiving_server.cpp  sending_server.cpp  server.cpp  ui_handlers.cpp  ui_utils.cpp
server/includes/headers/: receiving_server.h  sending_server.h  server.hpp  ui.hpp
server/ui/: MainWindowUI.glade
